# r0_es

./: README.md  README.rst  docs_watcher  requirements.txt  setup.cfg  update.bash
docs_build/html_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_build/html_build/.doctrees/: environment.pickle  index.doctree
docs_build/html_build/_modules/: __init__.html  cfg_settings.html  es_tools.html  http_base.html  index.html
docs_build/html_build/_sources/: index.rst.txt
docs_build/source/: conf.py  index.rst
src/r0_es/: __init__.py  cfg_settings.py  es_tools.py  http_base.py
src/r0_es.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: prod.cfg  test_api.py  test_es.py
