[metadata]
name = r0_es
version = 0.0.2
author = r0
author_email = boogieLing_o@163.com
description =
    A tool to connect elasticSearch，
    help users to add, delete, modify, and check documents and indexe.
    Date-related operations are easier to use and manage snapshot repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boogieLing/r0_es
project_urls =
    Bug Tracker = https://github.com/boogieLing/r0_es/issues
classifiers =
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src